--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 jar {
     manifest{
-        attributes ('Main-Class' : 'Main')
+        attributes ('Main-Class' : 'GitHubHandler')
     }
 }
 task codeCoverageReport(type: JacocoReport) {
